# test_task

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
.local/: Dockerfile
application/: __main__.py  app.py  config.py  container.py
application/api/: __init__.py
application/api/v1/: __init__.py  courses.py
application/domain/models/: course.py
application/domain/runners/: base.py  course_runner.py
application/domain/services/: courses_service.py
application/infrastructure/: db_context.py
application/infrastructure/adapters/: base.py  binance.py
application/infrastructure/repositories/: base.py  course.py
