[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Alexander Balykin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
asyncpg = "^0.29.0"
aiohttp = "^3.9.0"
click = "^8.1.7"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
